julia 20/09 falta so mainpage

--- a/TrabalhoNovo/MainPage.xaml
+++ b/TrabalhoNovo/MainPage.xaml
@@ -25,35 +25,40 @@
                VerticalTextAlignment="Center"
                Padding="10" />
 
-        <Button Grid.Row="2" Grid.ColumnSpan="3"
+        <Button  x:Name="ButtonResposta1"
+         Grid.Row="2" Grid.ColumnSpan="3"
                 Text="a-"
                 BackgroundColor="#5c3b78"
                 TextColor="White"
                 FontSize="12"
                 HeightRequest="50"
                 Margin="10" />
-        <Button Grid.Row="3" Grid.ColumnSpan="3"
+        <Button  x:Name="ButtonResposta2"
+         Grid.Row="3" Grid.ColumnSpan="3"
                 Text="b-"
                 BackgroundColor="#5c3b78"
                 TextColor="White"
                 FontSize="12"
                 HeightRequest="50"
                 Margin="10" />
-        <Button Grid.Row="4" Grid.ColumnSpan="3"
+        <Button  x:Name="ButtonResposta3"
+        Grid.Row="4" Grid.ColumnSpan="3"
                 Text="c-"
                 BackgroundColor="#5c3b78"
                 TextColor="White"
                 FontSize="12"
                 HeightRequest="50"
                 Margin="10" />
-        <Button Grid.Row="5" Grid.ColumnSpan="3"
+        <Button  x:Name="ButtonResposta4"
+        Grid.Row="5" Grid.ColumnSpan="3"
                 Text="d-"
                 BackgroundColor="#5c3b78"
                 TextColor="White"
                 FontSize="12"
                 HeightRequest="50"
                 Margin="10" />
-        <Button Grid.Row="6" Grid.ColumnSpan="3"
+        <Button  x:Name="ButtonResposta5"
+         Grid.Row="6" Grid.ColumnSpan="3"
                 Text="e-"
                 BackgroundColor="#5c3b78"
                 TextColor="White"
