--- a/TrabalhoNovo/MainPage.xaml
+++ b/TrabalhoNovo/MainPage.xaml
@@ -103,7 +103,8 @@
                         WidthRequest="120"
                         HeightRequest="40"
                         Margin="5"/>
-                <Button Grid.Row="7"
+                <Button x:Name="pular"
+                        Grid.Row="7"
                         Grid.Column="2"
                         Text="Pular"
                         Clicked="pulaclicado"
